--- a/01-content/index.html
+++ b/01-content/index.html
@@ -17,6 +17,8 @@
     <a href="#">Apply now!</a>
 
     <!-- Code your Cards section -->
+    <h2>Some of our campuses</h2>
+
     <img src="images/shanghai.jpg" alt="Shanghai" width="200">
     <h3>Shanghai</h3>
 
