--- a/02-css/index.html
+++ b/02-css/index.html
@@ -15,8 +15,9 @@
     <h1>Change your life, learn to code</h1>
     <p>Le Wagon brings technical skills to creative people</p>
     <a href="#">Apply now!</a>
-    <br>
+
     <!-- Code your Cards section -->
+    <h2>Some of our campuses</h2>
     <img src="images/shanghai.jpg" alt="Shanghai" width="200">
     <h3>Shanghai</h3>
 
