link to lewagon

--- a/01-content/index.html
+++ b/01-content/index.html
@@ -14,7 +14,7 @@
     <!-- Code your Banner section -->
     <h1>Change your life, learn to code</h1>
     <p>Le Wagon brings technical skills to creative people</p>
-    <a href="#">Apply now!</a>
+    <a href="https://www.lewagon.com/">Apply now!</a>
 
     <!-- Code your Cards section -->
     <h2>Some of our campuses</h2>
