--- a/03-box-model/index.html
+++ b/03-box-model/index.html
@@ -15,7 +15,7 @@
     <div>
       <h1>Change your life, learn to code</h1>
       <p>Le Wagon brings technical skills to creative people</p>
-      <a href="#">Apply now!</a>
+      <a href="https://www.lewagon.com/">Apply now!</a>
       <br>
     </div>
     <!-- Code your Cards section -->
