--- a/05-final/index.html
+++ b/05-final/index.html
@@ -15,7 +15,7 @@
     <div class="banner">
       <h1>Change your life, learn to code</h1>
       <p>Le Wagon brings technical skills to creative people</p>
-      <a href="#apply-section" class="btn">Apply now!</a>
+      <a href="https://www.lewagon.com/" class="btn">Apply now!</a>
     </div>
 
     <!-- Code your Cards section -->
