commented font import

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Le Wagon - Web Development Sprint</title>
 
     <!-- Importing fonts from Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Chivo:700|Overpass:400,700&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Chivo:700|Overpass:400,700&display=swap" rel="stylesheet"> -->
 
     <!-- Importing our stylesheet -->
     <link rel="stylesheet" href="style.css">
